--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,19 +6,24 @@
 	"extends": [
 		"standard-with-typescript",
 		"plugin:react/recommended",
+		"plugin:react-hooks/recommended",
 		"plugin:@stylistic/disable-legacy",
+		"plugin:@typescript-eslint/recommended",
 		"eslint:recommended"
 	],
 	"ignorePatterns": [
-		"node_modules"
+		"node_modules",
+		"dist"
 	],
+	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaVersion": "latest",
 		"sourceType": "module"
 	},
 	"plugins": [
 		"react",
-		"@stylistic"
+		"@stylistic",
+		"react-refresh"
 	],
 	"rules": {
 		"@typescript-eslint/non-nullable-type-assertion-style": [
@@ -47,6 +52,13 @@
 		"semi-style": [
 			"error",
 			"last"
+		],
+		"react/react-in-jsx-scope": "off",
+		"react-refresh/only-export-components": [
+			"warn",
+			{
+				"allowConstantExport": true
+			}
 		]
 	},
 	"settings": {
