--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 
 # production
-/build
+/dist
+tsconfig.tsbuildinfo
 
 # misc
 /.vscode
