--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
 	"name": "pokemon-directory",
 	"version": "1.0.0",
-	"homepage": "https://apbrodnicki.github.io/pokemon-directory/",
+	"homepage": "https://pokemon-directory.apbrodnicki.com",
 	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview"
+	},
 	"dependencies": {
 		"@emotion/react": "^11.11.3",
 		"@emotion/styled": "^11.11.0",
@@ -10,52 +17,33 @@
 		"@mui/icons-material": "^5.15.9",
 		"@mui/material": "^5.15.9",
 		"@mui/x-data-grid": "^6.19.4",
-		"@testing-library/jest-dom": "^5.17.0",
-		"@testing-library/react": "^13.4.0",
-		"@testing-library/user-event": "^13.5.0",
-		"@types/jest": "^27.5.2",
-		"@types/node": "^16.18.80",
-		"@types/react": "^18.2.55",
-		"@types/react-dom": "^18.2.19",
+		"@types/node": "^20.12.7",
 		"material-ui-popup-state": "^5.0.10",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.22.0",
-		"react-scripts": "5.0.1",
 		"web-vitals": "^2.1.4"
 	},
-	"scripts": {
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build",
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
 	"devDependencies": {
-		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+		"@babel/plugin-transform-private-property-in-object": "^7.24.1",
 		"@stylistic/eslint-plugin": "^1.6.1",
+		"@types/react": "^18.2.77",
+		"@types/react-dom": "^18.2.25",
 		"@typescript-eslint/eslint-plugin": "^6.21.0",
 		"@typescript-eslint/parser": "^6.21.0",
-		"eslint": "^8.56.0",
+		"@vitejs/plugin-react": "^4.2.1",
+		"dotenv": "^16.4.5",
+		"eslint": "^8.57.0",
 		"eslint-config-standard-with-typescript": "^43.0.1",
 		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-n": "^16.6.2",
 		"eslint-plugin-promise": "^6.1.1",
 		"eslint-plugin-react": "^7.33.2",
-		"gh-pages": "^6.1.1",
-		"typescript": "^4.9.5"
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.6",
+		"tsx": "^4.7.2",
+		"typescript": "^5.2.2",
+		"vite": "^5.2.0",
+		"vite-tsconfig-paths": "^4.3.2"
 	}
 }
