--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,21 @@
 {
 	"compilerOptions": {
+		"allowImportingTsExtensions": true,
 		"allowJs": true,
 		"allowSyntheticDefaultImports": true,
 		"baseUrl": "./src",
+		"composite": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"isolatedModules": true,
-		"jsx": "react",
+		"jsx": "react-jsx",
 		"lib": [
 			"dom",
 			"dom.iterable",
 			"esnext"
 		],
 		"module": "ESNext",
-		"moduleResolution": "node",
+		"moduleResolution": "bundler",
 		"noEmit": true,
 		"noFallthroughCasesInSwitch": true,
 		"noImplicitAny": true,
@@ -22,11 +24,14 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"target": "es6"
+		"target": "es6",
+		"useDefineForClassFields": true
 	},
 	"include": [
 		"src",
 		"src/declaration.d.ts",
+		"src/vite-env.d.ts",
+		"vite.config.ts"
 	],
 	"exclude": [
 		"node_modules",
