--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"target": "es6",
+		"target": "esnext",
 		"useDefineForClassFields": true
 	},
 	"include": [
